# bds_rule_based_scraping

./: .gitignore  README.md  VN_EN_mapping.md  pyproject.toml  some.html
LoveSoup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lovesoup/: batdongsan_models.py  cooks.py  general_extractor.py  muabannet_models.py  post_processing.py  property_models.py
lovesoup/precook_models/: batdongsan_models.py  bds123vn_models.py  cenhomes_models.py  mogi_models.py  muabannet_models.py  nhatot_models.py
lovesoup/precook_templates/: README.md  batdongsancomvn.yaml  bds123vn.yaml  cenhomes.yaml  mogi.yaml  muabannet.yaml
lovesoup/templates/: batdongsancomvn.yaml  bds123vn.yaml  cenhomes.yaml  mogi.yaml  muabannet.yaml  nhatot.yaml
tests/: README.md  test_bds123vn.py  test_mogi.py  test_muabannet.py
tests/test_data/batdongsan/: sample1.html  sample1.json
tests/test_data/bds123vn/: sample1.html  sample1.json  sample2.html  sample2.json  sample3.html
tests/test_data/cenhomes/: sample1.html  sample1.json  sample2.html  sample2.json
tests/test_data/mogi/: sample1.html  sample1.json
tests/test_data/muabannet/: sample1.html  sample1.json
tests/test_data/nhatot/: sample1.html  sample1.json
